Fix the layout for the charactor to avoid z-index

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,6 +4,7 @@
 }
 
 .maxWidthWrapper {
+  position: relative;
 }
 
 .header {
@@ -25,11 +26,11 @@
 }
 
 .characterWrapper {
-  z-index: -1;
   position: fixed;
-  right: 0;
-  height: 500px;
-  bottom: 20px;
+  top: 15%;
+  left: 60%;
+  bottom: 5%;
+  min-height: 500px;
 }
 
 .controlColumn {
@@ -37,11 +38,10 @@
 }
 
 .perspectiveDecoration {
-  z-index: -1;
   position: fixed;
-  bottom: 0;
+  top: 60%;
   left: 0;
   right: 0;
-  height: 35%;
+  height: 40%;
   background-color: hsl(195deg, 20%, 86%);
 }
